# ATAL---Projeto

./: README.md
atividades(C_Cpp)/: README.md
atividades(C_Cpp)/Codigos-C/: hello.c  pair.c  register  ultima  ultima.c
atividades(C_Cpp)/Codigos-Cpp/: Makefile.win  Project1.dev  Project1.layout  dijakstraFacil.dev  dijakstraFacil.layout  duduFazServico2.dev  fazServico.dev  fazServico.layout  hello  inversao.dev  inversao.layout  main.cpp  mainDUDUServe.cpp  mainDesenhoLab.cpp  mainDesvioRotas.cpp  mainInversao.cpp  mainMeistre.cpp  mainP  mainPaisGuerra.cpp  mainPromessa.cpp  mainServico.cpp  mainTEste.cpp  meistre.dev  meistre.layout  pair  paisemguerra.dev  paisemguerra.layout  promessa.dev  register.c  testeFuncao.dev
huffman/: Auxiliar.cpp  Auxiliar.h  CMakeLists.txt  main.cpp
huffman/.ipynb_checkpoints/: ProjetoAtal-checkpoint.ipynb
huffman/Image/: LEFTDesc.tiff  LEFT_4k3d_2160p24_003900.tiff
