cmake_minimum_required(VERSION 3.14)
project(huffiman)
find_package(OpenCV REQUIRED)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
add_executable(huffiman main.cpp Auxiliar.h Auxiliar.cpp)
TARGET_LINK_LIBRARIES(huffiman  ${OpenCV_LIBS})